Working on code generator / instruction scheduler logic